# studious-funicular

./: .gitignore  CMakeLists.txt  Course.h  README.md  TestClass.cpp  TestClass.h  admin.cpp  admin.h  course_manager.cpp  course_manager.h  function_return_setting.h  logger_system.cpp  logger_system.h  login_window.cpp  login_window.h  loginwindow.ui  main.cpp  main_window.cpp  main_window.h  mainwindow.ui  registration_window.cpp  registration_window.h  registrationwindow.ui  student.cpp  student.h  student_window.cpp  student_window.h  studentwindow.ui  teacher_window.cpp  teacher_window.h  teacherwindow.ui  软件需求.md
